; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_mxcmmc.c_mxcmci_writel.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_mxcmmc.c_mxcmci_writel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mxcmci_host = type { i64 }

@CONFIG_PPC_MPC512x = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mxcmci_host*, i32, i32)* @mxcmci_writel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mxcmci_writel(%struct.mxcmci_host* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mxcmci_host*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.mxcmci_host* %0, %struct.mxcmci_host** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @CONFIG_PPC_MPC512x, align 4
  %8 = call i64 @IS_ENABLED(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %3
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.mxcmci_host*, %struct.mxcmci_host** %4, align 8
  %13 = getelementptr inbounds %struct.mxcmci_host, %struct.mxcmci_host* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i32, i32* %6, align 4
  %16 = sext i32 %15 to i64
  %17 = add nsw i64 %14, %16
  %18 = call i32 @iowrite32be(i32 %11, i64 %17)
  br label %28

19:                                               ; preds = %3
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.mxcmci_host*, %struct.mxcmci_host** %4, align 8
  %22 = getelementptr inbounds %struct.mxcmci_host, %struct.mxcmci_host* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i32, i32* %6, align 4
  %25 = sext i32 %24 to i64
  %26 = add nsw i64 %23, %25
  %27 = call i32 @writel(i32 %20, i64 %26)
  br label %28

28:                                               ; preds = %19, %10
  ret void
}

declare dso_local i64 @IS_ENABLED(i32) #1

declare dso_local i32 @iowrite32be(i32, i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
